compile fixes Java 10 methods